@@ -61,6 +61,7 @@
 - OpenCL Runtime: Updated hashcat.hctune for Iris Pro GPU on OSX
 - Potfile: In v3.10 already, the default potfile suffix changed but the note about was missing. The "hashcat.pot" became "hashcat.potfile"
 - Potfile: Added old potfile detection, show warning message
+- Returncode: Added dedicated returncode (see docs/status_codes.txt) for shutdowns caused by --runtime and checkpoint keypress
 - Sanity: Added sanity check to disallow --speed-only in combination with -i
 - Sanity: Added sanity check to disallow --loopback in combination with --runtime
 - Threads: Replaced all calls to ctime() with ctime_r() to ensure thread safety
